<resources>
    <string name="app_name">Form</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone_number</string>
    <string name="country">Country</string>
    <string name="submit">Submit</string>
    <string name="form">Form</string>
    <string name="view">View</string>
</resources>